styles.css
* {
    box-sizing: border-box;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    background-color: moccasin;
}

/* Heading section*/

.banner {
    background-image: url(https://cdn.pixabay.com/photo/2018/09/16/22/08/software-3682509_960_720.jpg);
    color: moccasin;
    text-align: center;
    letter-spacing: 3px;
    padding-top: 8px;
    padding-bottom: 8px;
    opacity: 0.9; 
    margin: 0 auto;
}

h1, h2, table {
    border-radius: 5px;
}

h2 {
    letter-spacing: 1px;
    text-align: center;
    background-color: rgba(207, 82, 205, 0.973);
}

h3 {
    text-decoration: underline;
}

/* Table section */

table {
    border: 2px groove darkorchid;
    font-family: Arial, sans-serif;
    margin-left: auto;
    margin-right: auto;
    max-width: 1050px;
    overflow: scroll;
    
}

th {
    background-color: orchid;
}


td {
    border-top: 1px groove darkorchid;
    border-right: 1px groove darkorchid;;
}

.blank-row {
    height: 30px;
}

.code {
    font-family: monospace;
    background-color: cornsilk;
    font-size: larger;
    font-weight: bold;
}

